Внесены правки (БЭМ, Организация CSS, Подлючение шрифтов)

--- a/index.html
+++ b/index.html
@@ -4,29 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Форма регистрации. Ykul Project 1</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Gothic+A1&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-  <main class="parent">
+  <main class="container">
     <form action="#" method="post" class="feedback-form">
       <h1 class="feedback-form__title">Форма обратной связи</h1>
-      <div class="feedback-form__group">
-        <label for="name" class="label">Имя</label>
-        <input type="text" id="name" name="name" class="input" required>
+      <div class="feedback-form__field">
+        <label for="name" class="feedback-form__label">Имя</label>
+        <input type="text" id="name" name="name" class="feedback-form__input" required>
       </div>
-      <div class="feedback-form__group">
-        <label for="email" class="label">Email</label>
-        <input type="email" id="email" name="email" class="input" required>
+      <div class="feedback-form__field">
+        <label for="email" class="feedback-form__label">Email</label>
+        <input type="email" id="email" name="email" class="feedback-form__input" required>
       </div>
-      <div class="feedback-form__group">
-        <label for="tel" class="label">Телефон</label>
-        <input type="tel" id="tel" name="tel" class="input" required>
+      <div class="feedback-form__field">
+        <label for="tel" class="feedback-form__label">Телефон</label>
+        <input type="tel" id="tel" name="tel" class="feedback-form__input" required>
       </div>
-      <div class="feedback-form__group">
-        <button type="submit" class="button-orange">Отправить</button>
+      <div class="feedback-form__field">
+        <button type="submit" class="button button--orange">Отправить</button>
       </div>
     </form>
   </main>
